fix: pan-35 UI shifts when left nav is expanded/collapsed

--- a/prisma/prisma-cloud/blocks/sidenav/sidenav.css
+++ b/prisma/prisma-cloud/blocks/sidenav/sidenav.css
@@ -35,7 +35,6 @@
 
 .book .sidenav-container.aside-close {
   padding-left: var(--spacing--4);
-  padding-right: var(--spacing--4);
 }
 
 .sidenav-wrapper .toggle-aside {
@@ -575,6 +574,13 @@
 
 .pan-sidenav .toc-books li[data-key] > ul > li:first-child {
   display: none;
+}
+
+@media (max-width: 1248px) {
+  .book .sidenav-container.aside-close {
+    padding-left: var(--spacing--4);
+    padding-right: var(--spacing--4);
+  }
 }
 
 @media (min-width: 901px) {
